doc/src/content/docs/0.1.x/api/compute/holo/gspat.mdx
---
title: gspat
description: GS-PAT 法による多焦点最適化
sidebar:
  order: 13
srcPath: crates/autd3-rs-pattern-holo/src/linear_synthesis/gspat.rs
slug: 0.1.x/api/compute/holo/gspat
---

import CodeTabs from "@components/CodeTabs.astro";

gspat は, [gs](/autd3-sdk/0.1.x/api/compute/holo/gs/) を高速化したアルゴリズム.
アルゴリズムは Plasencia らの論文 ([Plasencia et al., 2020](https://doi.org/10.1145/3386569.3392492)) に基づく.

## API

<CodeTabs rust={"gspat(&geometry, &foci, wavelength, &option, &mut dst)?;"} python={"gspat(geometry, foci, wavelength, option, dst)"} csharp={"Holo.Gspat(geometry, foci, wavelength, option, dst);"} />

| 引数         | 型                     | 説明                      |
| ------------ | ---------------------- | ------------------------- |
| `geometry`   | `&Geometry`            | デバイス配置              |
| `foci`       | `&[ControlPoint]`      | 焦点列 (位置と目標振幅)   |
| `wavelength` | `Length`               | 波長                      |
| `option`     | `&GspatOption`         | 追加オプション (下記参照) |
| `dst`        | `&mut [[Emission; _]]` | 出力バッファ              |

引数は [gs](/autd3-sdk/0.1.x/api/compute/holo/gs/) と同一.

## GspatOption

<CodeTabs rust={"GspatOption {\n    repeat,\n    constraint,\n    directivity,\n    backend,\n    mask,\n}"} python={"GspatOption(\n    repeat,\n    constraint,\n    directivity,\n    backend,\n    mask,\n)"} csharp={"new GspatOption(\n    repeat,\n    constraint,\n    directivity,\n    backend,\n    mask\n)"} />

| フィールド    | 型                   | デフォルト                    |
|---------------|----------------------|---------------------------|
| `repeat`      | `NonZeroUsize`       | `100`                     |
| `constraint`  | `EmissionConstraint` | `Clamp(MIN, MAX)`         |
| `directivity` | `Directivity`        | `Sphere`                  |
| `backend`     | `impl LinAlgBackend` | `NalgebraBackend`         |
| `mask`        | `TransducerMask`     | `AllEnabled`              |

オプションは [gs](/autd3-sdk/0.1.x/api/compute/holo/gs/) と同一.

## Example

<CodeTabs rust={"use std::num::NonZeroUsize;\n\nuse autd3_rs::geometry::{Autd3, Geometry, offset};\nuse autd3_rs::units::{m, mm, s};\nuse autd3_rs::value::Intensity;\nuse autd3_rs_pattern::wavelength;\nuse autd3_rs_pattern_holo::{\n    ControlPoint, Directivity, EmissionConstraint, GspatOption, NalgebraBackend, Pa,\n    TransducerMask, gspat,\n};\n\nlet geometry = Geometry::new(vec![Autd3::default()]);\n\nlet mut dst = geometry.pattern_buffer();\n\ngspat(\n    &geometry,\n    &[\n        ControlPoint {\n            point: geometry.center() + offset(-30.0 * mm, 0.0 * mm, 150.0 * mm),\n            amplitude: 2.5e3 * Pa,\n        },\n        ControlPoint {\n            point: geometry.center() + offset(30.0 * mm, 0.0 * mm, 150.0 * mm),\n            amplitude: 2.5e3 * Pa,\n        },\n    ],\n    wavelength(340.0 * m / s),\n    &GspatOption {\n        repeat: NonZeroUsize::new(100).unwrap(),\n        constraint: EmissionConstraint::Clamp(Intensity::MIN, Intensity::MAX),\n        directivity: Directivity::Sphere,\n        backend: NalgebraBackend,\n        mask: TransducerMask::AllEnabled,\n    },\n    &mut dst,\n)?;"} python={"import numpy as np\nfrom autd3.geometry import Autd3, Geometry\nfrom autd3.units import m, s\nfrom autd3_pattern import wavelength\nfrom autd3_pattern_holo import (\n    ControlPoint,\n    Directivity,\n    EmissionConstraint,\n    GspatOption,\n    NalgebraBackend,\n    Pa,\n    TransducerMask,\n    gspat,\n)\n\ngeometry = Geometry([Autd3([0.0, 0.0, 0.0], [1.0, 0.0, 0.0, 0.0])])\n\ndst = geometry.pattern_buffer()\n\ngspat(\n    geometry,\n    [\n        ControlPoint(\n            point=geometry.center() + np.array([-30.0, 0.0, 150.0]),\n            amplitude=2.5e3 * Pa,\n        ),\n        ControlPoint(\n            point=geometry.center() + np.array([30.0, 0.0, 150.0]),\n            amplitude=2.5e3 * Pa,\n        ),\n    ],\n    wavelength(340 * m / s),\n    GspatOption(\n        repeat=100,\n        constraint=EmissionConstraint.Clamp(0x00, 0xFF),\n        directivity=Directivity.Sphere,\n        backend=NalgebraBackend(),\n        mask=TransducerMask.AllEnabled,\n    ),\n    dst,\n)"} csharp={"using System.Numerics;\nusing AUTD3;\nusing AUTD3.Holo;\nusing ControlPoint = AUTD3.Holo.ControlPoint;\nusing static AUTD3.Units;\nusing static AUTD3.Holo.HoloUnits;\n\nvar geometry = new Geometry(new[] { new Autd3(Vector3.Zero) });\n\nvar dst = geometry.PatternBuffer();\n\nHolo.Gspat(\n    geometry,\n    new[]\n    {\n        new ControlPoint(geometry.Center + new Vector3(-30.0f, 0.0f, 150.0f), 2.5e3f * Pa),\n        new ControlPoint(geometry.Center + new Vector3(30.0f, 0.0f, 150.0f), 2.5e3f * Pa),\n    },\n    Pattern.Wavelength(340.0f * m / s),\n    new GspatOption(\n        repeat: 100,\n        constraint: EmissionConstraint.Clamp(Intensity.Min, Intensity.Max),\n        directivity: Directivity.Sphere,\n        backend: new NalgebraBackend(),\n        mask: TransducerMask.AllEnabled\n    ),\n    dst\n);"} />
